Fix breadcrumbs on mobile

--- a/app/assets/stylesheets/nyulibraries_stylesheets/nyulibraries/_responsive.scss
+++ b/app/assets/stylesheets/nyulibraries_stylesheets/nyulibraries/_responsive.scss
@@ -151,7 +151,7 @@
 
 // Phones
 @media (max-width: 480px) {
-  #header .institution { float: none; }
+  #header .institution { display: none; }
 
   .form-horizontal .controls {
     margin-left: 0;
